# torch-imagetools

./: .buildinfo  .buildinfo.bak  .gitignore  LICENSE.md  README.md  basic.py  color.html  environment.yml  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  requirements.txt  ruff.toml  run_module.py  search.html  searchindex.js  test_statistics.py
_sources/: color.rst.txt  index.rst.txt
_sources/imgtools/: balance.rst.txt  color.rst.txt  enhance.rst.txt  filters.rst.txt  statistics.rst.txt  utils.rst.txt  wavelets.rst.txt
_static/: functions.css
balance/: __init__.py  test_balance.py  test_cct.py  test_est_illuminant.py  test_light.py
color/: test_cielab.py  test_cieluv.py  test_ciexyz.py  test_grayscale.py  test_hed.py  test_hsi.py  test_hsl.py  test_hsv.py  test_hwb.py  test_lms.py  test_rgb.py  test_yuv.py
core/: test_pywt_wrapping.py  test_wavelets.py
docs/source/: conf.py
enhance/: test_basic.py  test_equlization.py  test_hdr.py  test_transfer.py
filters/: test_blur.py  test_edges.py  test_prewitt.py  test_scharr.py  test_sobel.py
imgtools/: balance.html  color.html  core.html  enhance.html  filters.html  restoration.html  statistics.html  utils.html  wavelets.html
imgtools/_balance/: balance.html
imgtools/balance/: balance.html
imgtools/functions/: imgtools.enhance.adjust_gamma.html
imgtools/imgtools.enhance.basic/: imgtools.enhance.adjust_gamma.html  imgtools.enhance.adjust_inverse.html  imgtools.enhance.adjust_linear.html  imgtools.enhance.adjust_log.html  imgtools.enhance.adjust_sigmoid.html  imgtools.enhance.equlization.html  imgtools.enhance.high_frequency_emphasis_filter.html  imgtools.enhance.hist_equalize.html  imgtools.enhance.match_historgram.html  imgtools.enhance.match_mean_std.html  imgtools.enhance.unsharp_mask.html
imgtools/imgtools.enhance.equlization/: imgtools.enhance.hist_equalize.html  (+2 more)
requirements/: default.txt
statistics/: test_basic.py
test/: basic.py  statistics.py
tests/: basic.py  test_statistics.py
tools/: generate_init.py  generate_lazy_init.py  generate_requirements.py  generate_sphinx.py
wavelets/: __init__.py  test_pywt_wrapping.py  test_wavelets.py
(+201 files in other folders)
